k8s/app-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - name: app-a
          image: vhcns5/app-a:1c3f76806e14265d81e24692fa5537706133623b
          ports:
            - containerPort: 3000
