k8s/app-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-test-svc
  namespace: my-test-app
spec:
  selector:
    app: app-a-test
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
