k8s/app-a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-test-app
  namespace: my-test-app
spec:
  ingressClassName: traefik
  rules:
    - host: app-a.polymorph.co.kr
      http:
        paths:
          - path: /app-a
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 80
